--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,8 @@ spring.kafka.listener.missing-topics-fatal=false
 # spring.kafka.listener.type=batch
 # 批量消费每次最多消费多少条消息
 # spring.kafka.consumer.max-poll-records=50
+
+# 设置消息的自定义分区策略
+spring.kafka.producer.properties.partitioner.class=com.shepherd.kafka.partition.CustomizePartitioner
+
+spring.kafka.producer.properties.interceptor.class=
